Set project repository

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/karijkangas/"
+    "url": "https://github.com/karijkangas/nappi-api"
   },
   "keywords": [],
   "author": "Kari Kangas <karijkangas@gmail.com>",
